--- a/.github/workflows/sast-and-package.yml
+++ b/.github/workflows/sast-and-package.yml
@@ -1,4 +1,4 @@
-name: Static Code Analysis and Packaging
+name: Static Code Analysis and Package
 on:
   push:
     branches: [ "master","develop" ]
@@ -49,4 +49,4 @@ jobs:
       uses: actions/upload-artifact@v2 
       with:
         name: HelplineMCTS-API
-        path: target/mctsapi-v1.0.war  
+        path: target/104api-v1.0.war  
