--- a/.github/workflows/sast-and-package.yml
+++ b/.github/workflows/sast-and-package.yml
@@ -1,8 +1,8 @@
-name: Static Code Analysis and Package
-on:
+name: Static Code Analysis and Packaging
+true:
   push:
-    branches: [ "develop" ]
-    
+    branches:
+    - develop
 jobs:
   CodeQL:
     runs-on: ubuntu-latest
@@ -10,28 +10,26 @@ jobs:
       actions: read
       contents: read
       security-events: write
-
     strategy:
       fail-fast: false
     steps:
-    - name: Checkout code 
+    - name: Checkout code
       uses: actions/checkout@v2
     - name: Setup JDK 8
       uses: actions/setup-java@v2
       with:
         java-version: 8
-        distribution: 'adopt'
+        distribution: adopt
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
-        languages: Java    
+        languages: Java
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean install -DENV_VAR=test
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
       with:
-        languages: Java   
-    
+        languages: Java
   Packaging:
     needs: codeql
     runs-on: ubuntu-latest
@@ -42,11 +40,11 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: 8
-        distribution: 'adopt'
-    - name: Create WAR file 
+        distribution: adopt
+    - name: Create WAR file
       run: mvn -B package --file pom.xml
     - name: Upload WAR file as artifact
-      uses: actions/upload-artifact@v2 
+      uses: actions/upload-artifact@v2
       with:
         name: Helpline104-API
-        path: target/104api-v1.0.war  
+        path: target/104api-v1.0.war
