--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -18,31 +19,15 @@
 		<java.version>1.8</java.version>
 		<maven.test.skip>true</maven.test.skip>
 		<build.timestamp>${maven.build.timestamp}</build.timestamp>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 		<final-name>104api-v1.0</final-name>
-		<environment>dev</environment>
+		<environment>${ENV_VAR}</environment>
 		<target-properties>target/classes/application.properties</target-properties>
 		<source-properties>src/main/environment/104_${environment}.properties</source-properties>
-		<hostname-dev>10.208.122.32</hostname-dev>
-		<port-dev>9990</port-dev>
-		<hostname-uat>deviemr.piramalswasthya.org</hostname-uat>
-		<port-uat>9990</port-uat>
-		<hostname-test>10.208.122.38</hostname-test>
-		<port-test>9990</port-test>
-		<server-id>wildfly-${environment}</server-id>
-		<server-hostname>{hostname-${environment}}</server-hostname>
-		<server-port>{port-${environment}}</server-port>
 	</properties>
-	<repositories>
-		<repository>
-			<id>openkm.com</id>
-			<name>OpenKM Maven Repository</name>
-			<url>https://maven.openkm.com</url>
-		</repository>
-	</repositories>
 
 	<dependencies>
- 		<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 
@@ -54,21 +39,12 @@
 			</exclusions>
 
 		</dependency>
- 
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 
- 
-<!-- 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
-
- -->
 		<!-- Need this to compile JSP -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -111,21 +87,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-<dependency>
-<groupId>com.github.ulisesbocchio</groupId>
-<artifactId>jasypt-spring-boot-starter</artifactId>
-<version>3.0.0</version>
-</dependency>
-
-
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 		</dependency>
-
-		<!-- <dependency> <groupId>org.hibernate.javax.persistence</groupId> <artifactId>hibernate-jpa-2.0-api</artifactId> 
-			<version>1.0.1.Final</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
@@ -160,6 +126,16 @@
 			<version>21.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-multipart</artifactId>
+			<version>1.18</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>2.0-m11</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -217,11 +193,6 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.openkm</groupId>
-			<artifactId>sdk4j</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
@@ -239,103 +210,46 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session</artifactId>
 		</dependency>
-	<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>5.0.0</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.0.0</version>
+		</dependency>
 
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>5.0.0</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.0.0</version>
+		</dependency>
 
 
 
 	</dependencies>
-	<!-- <properties>
-		<java.version>1.8</java.version>
-		<maven.test.skip>true</maven.test.skip>
-		<final-name>104api-v1.0</final-name>
-		<environment>dev</environment>
-		<target-properties>target/classes/application.properties</target-properties>
-		<source-properties>src/main/environment/104_${environment}.properties</source-properties>
-		<hostname-dev>10.208.122.32</hostname-dev>
-		<port-dev>9990</port-dev>
-		<hostname-uat>deviemr.piramalswasthya.org</hostname-uat>
-		<port-uat>9990</port-uat>
-		<hostname-test>10.208.122.38</hostname-test>
-		<port-dev>9990</port-dev>
-		<server-id>wildfly-${environment}</server-id>
-		<server-hostname>{hostname-${environment}}</server-hostname>
-		<server-port>{port-${environment}}</server-port>
-
-	</properties>
-	-->
+	<!-- <properties> <java.version>1.8</java.version> <maven.test.skip>true</maven.test.skip> 
+		<final-name>104api-v1.0</final-name> <environment>dev</environment> <target-properties>target/classes/application.properties</target-properties> 
+		<source-properties>src/main/environment/104_${environment}.properties</source-properties> 
+		<hostname-dev>10.208.122.32</hostname-dev> <port-dev>9990</port-dev> <hostname-uat>deviemr.piramalswasthya.org</hostname-uat> 
+		<port-uat>9990</port-uat> <hostname-test>10.208.122.38</hostname-test> <port-dev>9990</port-dev> 
+		<server-id>wildfly-${environment}</server-id> <server-hostname>{hostname-${environment}}</server-hostname> 
+		<server-port>{port-${environment}}</server-port> </properties> -->
 
 	<build>
 		<finalName>104api-v1.0</finalName>
-		
+
 		<plugins>
-		
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
 			</plugin>
-		<!-- 	<plugin>
-				<groupId>pl.project13.maven</groupId>
-				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.2.4</version>
-				<executions>
-					<execution>
-						<id>get-the-git-infos</id>
-						<goals>
-							<goal>revision</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-					<prefix>git</prefix>
-					<verbose>false</verbose>
-					<generateGitPropertiesFile>true</generateGitPropertiesFile>
-					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
-					<format>json</format>
-					<gitDescribe>
-						<skip>false</skip>
-						<always>false</always>
-						<dirty>-dirty</dirty>
-					</gitDescribe>
-				</configuration>
-			</plugin> -->
-		
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		<!-- 	<plugin>
-				<groupId>org.wildfly.plugins</groupId>
-				<artifactId>wildfly-maven-plugin</artifactId>
-				<version>1.2.1.Final</version>
-				<configuration>
-				    <id>${server-id}</id>
-					<hostname>$${server-hostname}</hostname>
-					<port>$${server-port}</port>
-					<username>admin</username>
-					<password>ad@min123</password>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
-			<plugin> 
+
+			<plugin>
 
 
 				<groupId>org.apache.maven.plugins</groupId>
@@ -364,20 +278,20 @@
 				</executions>
 			</plugin>
 			<plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <webResources>
-                        <resource>
-                            <filtering>true</filtering>
-                            <directory>src/packaging/</directory>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-     
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<webResources>
+						<resource>
+							<filtering>true</filtering>
+							<directory>src/packaging/</directory>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
+
 		</plugins>
-		
+
 
 	</build>
 	<reporting>
