--- a/src/main/environment/104_test.properties
+++ b/src/main/environment/104_test.properties
@@ -1,18 +1,15 @@
 # dev env 
 spring.jpa.database=default
 # DB Connections - Primary
-spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
-#spring.datasource.username=piramaldev
-#spring.datasource.password=Piramal@2017
-
-encDbUserName=0YaEPoKpzM3TrEAHTLYQaf+DfR4mdaeP
-encDbPass=V+g/nL6/+ely0bgD7Du0yX83xNRl1H9Y
+spring.datasource.url=<Enter AMRIT DB URL here>
+spring.datasource.username=<Enter your AMRIT DB username>
+spring.datasource.password=<Enter your AMRIT DB password>
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #DB Connections - Secondary
-#secondary.datasource.username=piramaldev
-#secondary.datasource.password=Piramal@2017
-secondary.datasource.url=jdbc:mysql://10.208.122.38:3306/db_reporting?autoReconnect=true&useSSL=false
+secondary.datasource.username=<Enter your AMRIT secondary DB username>
+secondary.datasource.password=<Enter your AMRIT secondary DB password>
+secondary.datasource.url=<Enter AMRIT secondary DB URL here>
 secondary.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Common Config
@@ -21,9 +18,7 @@ common-url=http://10.208.122.38:8080/commonapi-v1.0
 ### Redis IP
 spring.redis.host=localhost
 
-## build commit issue
 
-## missing commit
 
 
 
