--- a/src/main/environment/104_dev.properties
+++ b/src/main/environment/104_dev.properties
@@ -1,19 +1,19 @@
 
 # dev env 
 # DB Connections 
-spring.datasource.url=<Enter AMRIT DB URL here>
-spring.datasource.username=<Enter your AMRIT DB username>
-spring.datasource.password=<Enter your AMRIT DB password>
+spring.datasource.url=<Enter AMRIT DB_IEMR URL here>
+spring.datasource.username=<Enter your AMRIT DB_IEMR username>
+spring.datasource.password=<Enter your AMRIT DB_IEMR password>
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #DB Connections - Secondary
-secondary.datasource.username=<Enter your AMRIT secondary DB username>
-secondary.datasource.password=<Enter your AMRIT secondary DB password>
-secondary.datasource.url=<Enter AMRIT secondary DB URL here>
+secondary.datasource.username=<Enter your AMRIT DB_REPORTING username>
+secondary.datasource.password=<Enter your AMRIT DB_REPORTING password>
+secondary.datasource.url=<Enter AMRIT DB_REPORTING URL here>
 secondary.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Common Config
-common-url=http://10.208.122.38:8080/commonapi-v1.0
+common-url=<Enter your socket address here>/commonapi-v1.0
 
 ### Redis IP
 spring.redis.host=localhost
